--- a/Wpf15puzzle/Wpf15puzzle.csproj
+++ b/Wpf15puzzle/Wpf15puzzle.csproj
@@ -78,6 +78,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Settings.cs" />
     <Page Include="MahAppsOverrides.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
