Add MainPage SplashPage Modify to N puzzle Add Click mode

--- a/Wpf15puzzle/App.config
+++ b/Wpf15puzzle/App.config
@@ -13,6 +13,9 @@
       <setting name="record" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="設定" serializeAs="String">
+        <value>0</value>
+      </setting>
     </Wpf15puzzle.Properties.Settings>
   </userSettings>
 	<!-- 綁定放入子資料夾的DLL -->
