--- a/WpfNpuzzle/Properties/Settings.settings
+++ b/WpfNpuzzle/Properties/Settings.settings
@@ -1,5 +1,5 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
-<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="WpfNpuzzle.Properties" GeneratedClassName="Settings">
+<SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="Wpf15puzzle.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
     <Setting Name="record" Type="System.Int32" Scope="User">
